k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-app-service
spec:
  type: LoadBalancer
  selector:
    app: aks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
